test/tests/errors/error-rhv-const.sm
// true
// false
// false
/**/
/**/

program {
    proc x(y: int) {
        output y;
    }
    const y: proc(int) = x;
}